tests/transpiler/x/swift/group_items_iteration.swift
// Generated by Mochi transpiler v0.10.34 on 2025-07-22 00:10:54 GMT+7
import Foundation

let data = ([["tag": "a", "val": 1], ["tag": "a", "val": 2], ["tag": "b", "val": 3]] as! [Any])
let groups = (({ var _groups: [String: [String: Any]] = [:]
var _res: [[String: Any]] = []
for d in (data as! [[String: Any]]) {
    let _key = d["tag"]!
    let _ks = String(describing: _key)
    var _g = _groups[_ks] ?? ["key": _key, "items": []]
    var _item: [String: Any] = ["__join__": true]
    _item["d"] = d
    _g["items"] = (_g["items"] as! [[String: Any]]) + [_item]
    _groups[_ks] = _g
}
var _list = Array(_groups.values)
_list.sort { a, b in String(describing: a["key"]) < String(describing: b["key"]) }
for g in _list {
    _res.append(g)
}
return _res })() as! [Any])
var tmp: [Any] = ([] as! [Any])
for _item in (groups as! [Any]) as! [[String: Any]] {
    let g = _item as! [String: Any]
    var total = 0
    for x in g["items"]! {
        total = ((total as! Double) + (x["val"]! as! Double))
    }
    tmp = (((tmp as! [Any]) + [["tag": g["key"]!, "total": total]]) as! [Any])
}
let result = (({ var _res: [Any] = []
for r in (tmp as! [Any]) {
    _res.append(r)
}
var _list = _res
_list.sort { left, right in
var r = left
let _ka = r["tag"]!
r = right
let _kb = r["tag"]!
return String(describing: _ka) < String(describing: _kb)
}
return _list })() as! [Any])
print(String(describing: (result as! [Any])))
